--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,6 +69,7 @@ details > summary::-webkit-details-marker {
   filter: blur(34px);
   transform: matrix(1, 0, -0.03, 1, 0, 0);
 }
+
 .codeblock2 {
   position: absolute;
   width: 372.95px;
@@ -86,6 +87,7 @@ details > summary::-webkit-details-marker {
   filter: blur(34px);
   transform: matrix(1, 0, -0.03, 1, 0, 0);
 }
+
 .code-border {
   border: 2px solid;
   border-image-slice: 1;
@@ -98,8 +100,10 @@ details > summary::-webkit-details-marker {
   );
   /* backdrop-filter: blur(26px); */
 }
+
 .homepage_bg {
-  background: url("../src/assets/Images/bghome.svg");
+  /* background: url("../src/assets/Images/bghome.svg"); */
+  background: url("./assets/images/bghome.svg");
   /* background-size: contain; */
 }
 
@@ -235,12 +239,15 @@ details > summary::-webkit-details-marker {
 .blackButton {
   @apply cursor-pointer rounded-md bg-richblack-800 px-[20px] py-[8px] font-semibold text-richblack-5;
 }
+
 .lable-style {
   @apply text-[14px] text-richblack-5;
 }
+
 .form-style {
   @apply rounded-lg bg-richblack-700 p-3 text-[16px] leading-[24px] text-richblack-5 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
 }
+
 .section_heading {
   @apply text-2xl font-bold text-richblack-5 lg:text-4xl;
 }
